# PetProjectorBackend

./: .gitignore  README.md  pyproject.toml
app/app/: settings.py
docs/: 1. Функциональные возможности.md  2. Описание сущностей.md  3. Таблицы базы данных.md  4. Технические решения.md
